--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "ejs": "^2.5.7",
     "element-ui": "^2.0.10",
     "jquery": "^3.2.1",
-    "vue": "^2.3.3",
+    "vue": "^2.5.13",
     "vue-resource": "^1.3.4",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vue-template-compiler": "^2.5.13"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -78,9 +80,7 @@
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
-    "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.3.3",
     "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
